--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/networks.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/networks.html
@@ -7,19 +7,18 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <!-- Site Properities -->
-<title>Storage</title>
+<title>Network</title>
 <script type="text/javascript" src="res/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="res/jquery.ui.position.js"></script>
 <script type="text/javascript" src="res/jquery.contextMenu.js"></script>
 <script type="text/javascript" src="res/semantic.js"></script>
 <script type="text/javascript" src="res/jquery.dataTables.js"></script>
 <script type="text/javascript" src="res/common/menutree.js"></script>
-<script type="text/javascript" src="res/storage/storage.js"></script>
+<script type="text/javascript" src="res/network/networks.js"></script>
 <link rel="stylesheet" type="text/css" href="res/semantic.css">
 <link rel="stylesheet" type="text/css" href="res/jquery.dataTables.css">
-<link rel="stylesheet" type="text/css" href="res/storage/storage.css">
+<link rel="stylesheet" type="text/css" href="res/network/networks.css">
 <link rel="stylesheet" type="text/css" href="res/jquery.contextMenu.css">
-
 </head>
 <body id="page">
 	<div class="ui menu">
@@ -89,7 +88,7 @@
 		<div class="fourteen wide column">
 			<!-- <div class="button demo"> -->
 			<div class="table_container">
-				<div class="ui basic button" id="newstoragebutton">
+				<div class="ui basic button" id="newnetbutton">
 					<i class="plus icon"></i>New
 				</div>
 				<div class="ui basic button">
@@ -105,8 +104,7 @@
 					<i class="info circle icon"></i>Guide Me
 				</div>
 				<!-- </div> -->
-				<table id="storagetable" class="display" cellspacing="0"
-					width="100%">
+				<table id="networktable" class="display" cellspacing="0" width="100%">
 				</table>
 			</div>
 			<div class="ui top attached tabular menu">
