--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/datacenters.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/datacenters.html
@@ -4,25 +4,24 @@
 <!-- Standard Meta -->
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <!-- Site Properities -->
-<title>Storage</title>
+<title>Data Centers</title>
 <script type="text/javascript" src="res/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="res/jquery.ui.position.js"></script>
 <script type="text/javascript" src="res/jquery.contextMenu.js"></script>
 <script type="text/javascript" src="res/semantic.js"></script>
 <script type="text/javascript" src="res/jquery.dataTables.js"></script>
 <script type="text/javascript" src="res/common/menutree.js"></script>
-<script type="text/javascript" src="res/storage/storage.js"></script>
+<script type="text/javascript" src="res/datacenter/datacenters.js"></script>
 <link rel="stylesheet" type="text/css" href="res/semantic.css">
 <link rel="stylesheet" type="text/css" href="res/jquery.dataTables.css">
-<link rel="stylesheet" type="text/css" href="res/storage/storage.css">
+<link rel="stylesheet" type="text/css" href="res/datacenter/datacenters.css">
 <link rel="stylesheet" type="text/css" href="res/jquery.contextMenu.css">
-
 </head>
 <body id="page">
-	<div class="ui menu">
+	<!-- Menu start -->
+	<div id="menuinclude" class="ui menu">
 		<a class="item"> Home </a>
 		<div class="ui pointing dropdown link item" tabindex="-1">
 			<i class="dropdown icon" tabindex="0"></i> <span class="text">Data
@@ -83,32 +82,22 @@
 			</div>
 		</div>
 	</div>
+	<!-- Menu end -->
+	
 	<div class="ui grid">
 		<div class="two wide column" style="padding-right: 0px" id="menucontainer">
 		</div>
 		<div class="fourteen wide column">
-			<!-- <div class="button demo"> -->
+			<!-- Top Menu start -->
 			<div class="table_container">
-				<div class="ui basic button" id="newstoragebutton">
-					<i class="plus icon"></i>New
-				</div>
-				<div class="ui basic button">
-					<i class="edit icon"></i>Edit
-				</div>
-				<div class="ui basic button">
-					<i class="remove icon"></i>Remove
-				</div>
-				<div class="ui basic button">
-					<i class="remove circle icon"></i>Force Remove
-				</div>
-				<div class="ui basic button">
-					<i class="info circle icon"></i>Guide Me
-				</div>
-				<!-- </div> -->
-				<table id="storagetable" class="display" cellspacing="0"
-					width="100%">
-				</table>
+				<div class="ui basic button" id="newdcbutton"><i class="plus icon"></i>New</div>
+				<div class="ui basic button"><i class="edit icon"></i>Edit</div>
+				<div class="ui basic button"><i class="remove icon"></i>Remove</div>
+				<div class="ui basic button"><i class="remove circle icon"></i>Force Remove</div>
+				<div class="ui basic button"><i class="info circle icon"></i>Guide Me</div>
+				<table id="dctable" class="display" cellspacing="0" width="100%"></table>
 			</div>
+			<!-- Top Menu end -->
 			<div class="ui top attached tabular menu">
 				<a class="item" data-tab="storage">Storage</a> <a class="item"
 					data-tab="net">Logical Networks</a> <a class="item" data-tab="qos">QoS</a>
@@ -176,10 +165,10 @@
 				Third</div>
 		</div>
 	</div>
-	<div class="new ui modal">
+	<div class="new ui modal" id="newdcmodal">
 		<i class="close icon"></i>
 		<div class="header">New Data Center</div>
-		<div div="newmodal" class="content">
+		<div class="content">
 			<div class="ui form">
 				<div class="fields">
 					<div class="seven wide field name">Name</div>
