--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/vms.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/vms.html
@@ -7,17 +7,17 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <!-- Site Properities -->
-<title>Storage</title>
+<title>Virtual Machines</title>
 <script type="text/javascript" src="res/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="res/jquery.ui.position.js"></script>
 <script type="text/javascript" src="res/jquery.contextMenu.js"></script>
 <script type="text/javascript" src="res/semantic.js"></script>
 <script type="text/javascript" src="res/jquery.dataTables.js"></script>
 <script type="text/javascript" src="res/common/menutree.js"></script>
-<script type="text/javascript" src="res/storage/storage.js"></script>
+<script type="text/javascript" src="res/vm/vms.js"></script>
 <link rel="stylesheet" type="text/css" href="res/semantic.css">
 <link rel="stylesheet" type="text/css" href="res/jquery.dataTables.css">
-<link rel="stylesheet" type="text/css" href="res/storage/storage.css">
+<link rel="stylesheet" type="text/css" href="res/vm/vms.css">
 <link rel="stylesheet" type="text/css" href="res/jquery.contextMenu.css">
 
 </head>
@@ -105,7 +105,7 @@
 					<i class="info circle icon"></i>Guide Me
 				</div>
 				<!-- </div> -->
-				<table id="storagetable" class="display" cellspacing="0"
+				<table id="vmstable" class="display" cellspacing="0"
 					width="100%">
 				</table>
 			</div>
