--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/hosts.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/hosts.html
@@ -22,11 +22,67 @@
 <link rel="stylesheet" type="text/css" href="res/jquery.contextMenu.css">
 </head>
 <body id="page">
-	<div id="topmenucontainer" class="ui menu">
+	<div class="ui menu">
+		<a class="item"> Home </a>
+		<div class="ui pointing dropdown link item" tabindex="-1">
+			<i class="dropdown icon" tabindex="0"></i> <span class="text">Data
+				Centers</span>
+			<div class="menu transition hidden" tabindex="-1">
+				<div class="item active selected">
+					<i class="dropdown icon" tabindex="0"></i> <span class="text">Default</span>
+					<div class="menu transition hidden" style="">
+						<div class="header">Storage</div>
+						<div class="item ">192-168-135-129-Local</div>
+						<div class="header">Network</div>
+						<div class="item">mymanager</div>
+						<div class="header">Templates</div>
+						<div class="header">Clusters</div>
+						<div class="item">
+							<i class="dropdown icon" tabindex="1"></i> <span class="text">Default</span>
+							<div class="menu transition hidden" style="">
+								<div class="header">Hosts</div>
+								<div class="item">192.168.135.129</div>
+								<div class="header">VMs</div>
+								<div class="item">cimi_machine1</div>
+								<div class="item">cimi_machine3</div>
+								<div class="item">cimi_machine5</div>
+								<div class="item">vm_mini1</div>
+								<div class="item">vm_mini2</div>
+								<div class="item">myvm</div>
+								<div class="item">myvm_1</div>
+								<div class="item">cimi_machine5</div>
+								<div class="item">cimi_machine7</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="ui dropdown item" tabindex="0">
+			External Providers
+			<div class="menu transition hidden" tabindex="-1" style="">
+				<a class="item">Sign Out</a> <a class="item">Profile</a>
+			</div>
+		</div>
+		<div class="right menu">
+			<div class="item">
+				<div class="ui icon input">
+					<input type="text" placeholder="Search..."> <i
+						class="search link icon"></i>
+				</div>
+			</div>
+			<div class="ui dropdown item" tabindex="0">
+				<i class="user icon"></i> admin <i class="dropdown icon"
+					tabindex="0"></i>
+				<div class="menu transition hidden" tabindex="-1" style="">
+					<a class="item">Sign Out</a> <a class="item">Profile</a>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div class="ui grid">
-		<div class="two wide column" style="padding-right: 0px" id="menucontainer">
-		</div>
+		<div class="two wide column" style="padding-right: 0px"
+			id="menucontainer"></div>
 		<div class="fourteen wide column">
 			<!-- <div class="button demo"> -->
 			<div class="table_container">
@@ -59,32 +115,37 @@
 						<div class="fields">
 							<div class="four wide field name">Name:</div>
 							<div class="twelve wide field value">
-								<input type="text" placeholder="Host Name" id="hname" name="hname">
+								<input type="text" placeholder="Host Name" id="hname"
+									name="hname">
 							</div>
 						</div>
 						<div class="fields">
 							<div class="four wide field name">Comment:</div>
 							<div class="twelve wide field value">
-								<input type="text" placeholder="Comment" id="hcomment" name="hcomment">
+								<input type="text" placeholder="Comment" id="hcomment"
+									name="hcomment">
 							</div>
 						</div>
 						<div class="fields">
 							<div class="four wide field name">Address:</div>
 							<div class="twelve wide field value">
-								<input type="text" placeholder="Address" id="haddress" name="haddress">
+								<input type="text" placeholder="Address" id="haddress"
+									name="haddress">
 							</div>
 						</div>
 						<div class="fields">
 							<div class="four wide field name">SSH Port:</div>
 							<div class="twelve wide field value">
-								<input type="text" placeholder="SSH Port" id="hport" name="hport">
+								<input type="text" placeholder="SSH Port" id="hport"
+									name="hport">
 							</div>
 						</div>
 						<div class="fields">
 							<div class="six wide field name">Authentication:</div>
 							<div class="twelve wide field value">
-								<input type="text" value="root" readonly="true" id="huser" name="huser">
-								<input type="text" placeholder="Password" id="hpwd" name="hpwd">
+								<input type="text" value="root" readonly="true" id="huser"
+									name="huser"> <input type="text" placeholder="Password"
+									id="hpwd" name="hpwd">
 							</div>
 						</div>
 					</div>
