--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/networks.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/networks.html
@@ -15,6 +15,7 @@
 <script type="text/javascript" src="res/jquery.dataTables.js"></script>
 <script type="text/javascript" src="res/common.js"></script>
 <script type="text/javascript" src="res/network/networks.js"></script>
+<link rel="stylesheet" type="text/css" href="res/common.css">
 <link rel="stylesheet" type="text/css" href="res/semantic.css">
 <link rel="stylesheet" type="text/css" href="res/jquery.dataTables.css">
 <link rel="stylesheet" type="text/css" href="res/network/networks.css">
@@ -48,155 +49,6 @@
 				<table id="networktable" class="display" cellspacing="0" width="100%">
 				</table>
 			</div>
-			<div class="ui top attached tabular menu">
-				<a class="item" data-tab="storage">Storage</a> <a class="item"
-					data-tab="net">Logical Networks</a> <a class="item" data-tab="qos">QoS</a>
-				<a class="item" data-tab="clust">Clusters</a> <a class="item active"
-					data-tab="perm">Permissions</a> <a class="item" data-tab="event">Events</a>
-			</div>
-			<div class="ui bottom attached tab segment" data-tab="storage">
-				<div class="table_container">
-					<div class="ui basic button">
-						</i>Attach Data
-					</div>
-					<div class="ui basic button">
-						</i>Attach ISO
-					</div>
-					<div class="ui basic button">
-						</i>Attach Export
-					</div>
-					<div class="ui basic button">
-						</i>Detach
-					</div>
-					<div class="ui basic button">
-						</i>Activate
-					</div>
-					<div class="ui basic button">
-						</i>Maintenance
-					</div>
-					<!-- </div> -->
-					<table id="storetable" class="display" cellspacing="0" width="100%">
-					</table>
-				</div>
-			</div>
-			<div class="ui bottom attached tab segment" data-tab="net">
-				<div class="table_container">
-					<div class="ui basic button">
-						</i>New
-					</div>
-					<div class="ui basic button">
-						</i>Edit
-					</div>
-					<div class="ui basic button">
-						</i>Remove
-					</div>
-					<!-- </div> -->
-					<table id="nettable" class="display" cellspacing="0" width="100%">
-					</table>
-				</div>
-			</div>
-			<div class="ui bottom attached tab segment" data-tab="qos"></div>
-			<div class="ui bottom attached tab segment" data-tab="clust">
-				Third</div>
-			<div class="ui bottom attached active tab segment" data-tab="perm">
-				<div class="table_container">
-					<div class="ui basic button">
-						</i>Add
-					</div>
-					<div class="ui basic button">
-						</i>Remove
-					</div>
-					<!-- </div> -->
-					<table id="permtable" class="display" cellspacing="0" width="100%">
-					</table>
-				</div>
-			</div>
-			<div class="ui bottom attached tab segment" data-tab="event">
-				Third</div>
-		</div>
-	</div>
-	<div class="new ui modal">
-		<i class="close icon"></i>
-		<div class="header">New Data Center</div>
-		<div div="newmodal" class="content">
-			<div class="ui form">
-				<div class="fields">
-					<div class="seven wide field name">Name</div>
-					<div class="nine wide field value">
-						<input type="text" placeholder="Name Input">
-					</div>
-				</div>
-				<div class="fields">
-					<div class="seven wide field name">Description</div>
-					<div class="nine wide field value">
-						<input type="text" placeholder="Description">
-					</div>
-				</div>
-				<div class="fields">
-					<div class="seven wide field name">Storage Type</div>
-					<div class="nine wide field value">
-						<div class="ui selection dropdown" tabindex="0">
-							<select>
-								<option value="1" selected="">Shared</option>
-								<option value="2">Shared</option>
-							</select> <i class="dropdown icon"></i>
-							<div class="text">Shared</div>
-							<div class="menu" tabindex="-1">
-								<div class="item active selected" data-value="1">Shared</div>
-								<div class="item" data-value="2">Shared</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="fields">
-					<div class="seven wide field name">Compatibility Version</div>
-					<div class="nine wide field value">
-						<div class="ui selection dropdown" tabindex="0">
-							<select>
-								<option value="1" selected="">3.5</option>
-								<option value="2">3.4</option>
-								<option value="3">3.1</option>
-								<option value="4">3.2</option>
-								<option value="5">3.3</option>
-							</select> <i class="dropdown icon"></i>
-							<div class="text">3.5</div>
-							<div class="menu" tabindex="-1">
-								<div class="item active selected" data-value="1">3.5</div>
-								<div class="item" data-value="2">3.4</div>
-								<div class="item" data-value="3">3.1</div>
-								<div class="item" data-value="4">3.2</div>
-								<div class="item" data-value="5">3.3</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="fields">
-					<div class="seven wide field name">Quota Mode</div>
-					<div class="nine wide field value">
-						<div class="ui selection dropdown" tabindex="0">
-							<select>
-								<option value="1" selected="">Disable</option>
-								<option value="2">Enable</option>
-							</select> <i class="dropdown icon"></i>
-							<div class="text">Disable</div>
-							<div class="menu" tabindex="-1">
-								<div class="item active selected" data-value="1">Disable</div>
-								<div class="item" data-value="2">Enable</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="fields">
-					<div class="seven wide field name">Comment</div>
-					<div class="nine wide field value">
-						<input type="text" placeholder="Comment">
-					</div>
-				</div>
-			</div>
-		</div>
-		<div id="modalbottom" class="actions">
-			<div class="ui primary button">Ok</div>
-			<div class="ui basicv button">Cancel</div>
 		</div>
 	</div>
 	<div class="newnet ui modal">
