--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/top.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/top.html
@@ -1,3 +1,11 @@
-<div>
-
+<div class="ui item">KVM Manager</div>
+<div class="right menu">
+	<div class="ui dropdown item" tabindex="0">
+		<i class="user icon"></i> admin <i class="dropdown icon"
+			tabindex="0"></i>
+		<div class="menu transition hidden" tabindex="-1">
+			<a class="item" id="signoutbutton">Sign Out</a>
+		</div>
+	</div>
 </div>
+::after
