--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/users.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/users.html
@@ -21,21 +21,8 @@
 <link rel="stylesheet" type="text/css" href="res/jquery.contextMenu.css">
 </head>
 <body id="page">
-	<!-- Menu start -->
-	<div id="menuinclude" class="ui menu">
-		<a class="item"> Home </a>
-		<div class="right menu">
-			<div class="ui dropdown item" tabindex="0">
-				<i class="user icon"></i> admin <i class="dropdown icon"
-					tabindex="0"></i>
-				<div class="menu transition hidden" tabindex="-1" style="">
-					<a class="item">Sign Out</a> <a class="item">Profile</a>
-				</div>
-			</div>
-		</div>
+	<div id="topmenucontainer" class="ui menu">
 	</div>
-	<!-- Menu end -->
-
 	<div class="ui grid">
 		<div class="two wide column" style="padding-right: 0px"
 			id="menucontainer"></div>
