--- a/frontend/webadmin/modules/uiadmin/src/main/webapp/vms.html
+++ b/frontend/webadmin/modules/uiadmin/src/main/webapp/vms.html
@@ -23,17 +23,7 @@
 
 </head>
 <body id="page">
-	<div class="ui menu">
-		<a class="item"> Home </a>
-		<div class="right menu">
-			<div class="ui dropdown item" tabindex="0">
-				<i class="user icon"></i> admin <i class="dropdown icon"
-					tabindex="0"></i>
-				<div class="menu transition hidden" tabindex="-1" style="">
-					<a class="item">Sign Out</a> <a class="item">Profile</a>
-				</div>
-			</div>
-		</div>
+	<div class="ui menu" id="topmenucontainer">
 	</div>
 	<div class="ui grid">
 		<div class="two wide column" style="padding-right: 0px" id="menucontainer">
